--- a/ubiquity/chrome/locale/pt-PT/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/pt-PT/aboutubiquity.properties
@@ -7,8 +7,8 @@
 ############################
 
 ubiquity.nav.main=Tutorial
-ubiquity.nav.settings=Configurações
-ubiquity.nav.commands=Seus comandos
+ubiquity.nav.settings=Definições
+ubiquity.nav.commands=Os seus comandos
 ubiquity.nav.getnewcommands=Obter novos comandos
 ubiquity.nav.support=Suporte
 ubiquity.nav.hackubiquity=Criar comandos
@@ -22,12 +22,12 @@ ubiquity.nav.hackubiquity=Criar comandos
 
 # could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 
-ubiquity.prefkeys.notifybadmodifier=Você deve configurar uma tecla modificadora como Shift, Ctrl, Alt ou Meta.
+ubiquity.prefkeys.notifybadmodifier=Deve ter uma tecla modificadora com Shift, Ctrl, Alt ou Meta.
 ubiquity.prefkeys.notifyalphanumeric=Apenas teclas alfanuméricas ou espaço são permitidos.
 ubiquity.prefkeys.clickhere=Clique aqui para alterar
 # After a change occurs this is the confirmation along with modifier names
 
-ubiquity.prefkeys.confirmchange=Sua tecla foi alterada para
+ubiquity.prefkeys.confirmchange=A sua tecla foi alterada para
 # These are not yet attached, see prefkeys.js for details.
 
 # Binding and feedback does not work when applied.
@@ -41,20 +41,30 @@ ubiquity.prefkeys.meta=Meta
 ubiquity.prefkeys.pressyourcombo=Pressione sua combinação…
 ############################
 
+# settings.js
+
+# chrome://ubiquity/content/settings.xhtml
+
+############################
+
+ubiquity.settings.restartfirefox=Esta alteração terá efeito após reiniciar o Firefox.
+ubiquity.settings.opennewwindows=Esta alteração terá efeito quando abrir novas janelas.
+ubiquity.settings.skinsaved=O seu tema foi guardado!
+ubiquity.settings.skinerror=Erro ao guardar o seu tema.
+ubiquity.settings.skinauthor=criado por %S
+ubiquity.settings.skinlicense=licenciado como %S
+ubiquity.settings.viewskinsource=ver código-fonte
+ubiquity.settings.uninstallskin=desinstalar
+############################
+
 # confirm-add-js.js
 
 # chrome://ubiquity/content/confirm-add-command.xhtml
 
 ############################
 
-ubiquity.settings.restartfirefox=Esta alteração terá efeito após você reiniciar o Firefox.
-ubiquity.settings.opennewwindows=Esta alteração terá efeito ao abrir novas janelas.
-ubiquity.settings.skinsaved=Seu tema foi salvo!
-ubiquity.settings.skinerror=Erro ao salvar o seu tema.
-ubiquity.settings.skinauthor=criado por %S
-ubiquity.settings.skinlicense=licenciado como %S
-ubiquity.settings.viewskinsource=exibir código-fonte
-ubiquity.settings.uninstallskin=desinstalar
+ubiquity.subscription.successtitle=Subscrição do Feed de comandos do Ubiquity concluída com sucesso
+ubiquity.subscription.successheader=Subscrição concluída com sucesso
 ############################
 
 # localization-template.js
@@ -63,8 +73,6 @@ ubiquity.settings.uninstallskin=desinstalar
 
 #
 
-ubiquity.subscription.successtitle=Inscrição do Feed de comandos do Ubiquity concluída com sucesso!
-ubiquity.subscription.successheader=Inscrição concluída com sucesso!
 # cmdlist.js
 
 # chrome://ubiquity/content/cmdlist.xhtml
@@ -75,16 +83,8 @@ ubiquity.subscription.successheader=Inscrição concluída com sucesso!
 
 ############################
 
-############################
-
-# thenext.js
-
-# chrome://ubiquity/content/relevant.xhtml
-
-############################
-
-ubiquity.showhidehelp.show=Exibir ajuda
-ubiquity.showhidehelp.hide=Ocultar ajuda
+ubiquity.showhidehelp.show=Mostrar Ajuda
+ubiquity.showhidehelp.hide=Ocultar Ajuda
 ############################
 
 # cmdlist.js
@@ -93,19 +93,19 @@ ubiquity.showhidehelp.hide=Ocultar ajuda
 
 ############################
 
-ubiquity.cmdlist.unsubscribefeed=desisncrever
-ubiquity.cmdlist.feedupdated=Uma atualização está disponível neste repositório.
-ubiquity.cmdlist.viewsource=exibir código-fonte
-ubiquity.cmdlist.viewfeedsource=exibir
+ubiquity.cmdlist.unsubscribefeed=remover
+ubiquity.cmdlist.feedupdated=Está disponível uma actualização para este feed.
+ubiquity.cmdlist.viewsource=ver código-fonte
+ubiquity.cmdlist.viewfeedsource=ver código-fonte auto-actualizado
 ubiquity.cmdlist.localetemplate=obter modelo de localização
-ubiquity.cmdlist.synonyms=também conhecido como %S
+ubiquity.cmdlist.synonyms=também chamado %S
 ubiquity.cmdlist.createdby=por %S
 ubiquity.cmdlist.license=licenciado como %S
-ubiquity.cmdlist.contributions=colaborações de %S
+ubiquity.cmdlist.contributions=contribuições por %S
 ubiquity.cmdlist.homepage=página inicial
-ubiquity.cmdlist.viewmoreinfo=ler mais informações em %S
-ubiquity.cmdlist.oldparsertitle=Esse comando não foi executado por ser incompatível com o Parser 2.
-ubiquity.cmdlist.resubscribe=reinscrever-se
+ubiquity.cmdlist.viewmoreinfo=leia mais informações em %S
+ubiquity.cmdlist.oldparsertitle=Este comando não foi executado por ser incompatível com o Parser 2.
+ubiquity.cmdlist.resubscribe=re-subscrever
 ubiquity.cmdlist.purge=banir
 ############################
 
