--- a/ubiquity/chrome/locale/it-IT/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/it-IT/aboutubiquitytutorial.properties
@@ -1,35 +1,35 @@
 ###### Tutorial start page
 
-tutorial.welcome=欢迎来到 Ubiquity 教程。
-tutorial.fromthestart=点击这里从教程最初开始
-tutorial.fromthemiddle=从教程中间开始：
-tutorial.howtostart=如何启动 Ubiquity
-tutorial.previews=预览(天气命令)
-tutorial.suggestions=建议名单(计算,Google)
-tutorial.selecting=选择,执行(翻译,地图)
-tutorial.morecommands=如何获得帮助和了解更多命令
+tutorial.welcome=Welcome to the Ubiquity Tutorial.
+tutorial.fromthestart=Fare clic qui per cominciare da zero
+tutorial.fromthemiddle=Start from the middle:
+tutorial.howtostart=Come avviare Ubiquity
+tutorial.previews=Anteprima (comando Weather)
+tutorial.suggestions=I suggerimenti visualizzati (Calcola, Google)
+tutorial.selecting=Eseguire, selezionare (Traduci, Mappa)
+tutorial.morecommands=Come ottenere supporto e scoprire nuovi comandi
 ##### Stage 01 (part 1 of 6) #####
 
-tutorial.stage01h1=Ubiquity 教程，1/6：如何启动 Ubiquity
-tutorial.stage01p1=欢迎来到Ubiquity 教程。
-tutorial.stage01p2=让我们开始吧。召唤 Ubiquity，现在做到这一点：
-tutorial.stage01p3=按住
+tutorial.stage01h1=Tutorial di Ubiquity: parte 1 di 6: Come avviare Ubiquity
+tutorial.stage01p1=Benvenuto al tutorial di Ubiquity
+tutorial.stage01p2=Let's get started.  To summon Ubiquity, do this now:
+tutorial.stage01p3=Hold down the
 tutorial.stage01p4=key and tap the
-tutorial.stage01p5=键。
+tutorial.stage01p5=key.
 ##### Stage 02
 
-tutorial.stage02p1=这是 Ubiquity <strong>输入框</strong>。您可以在这里输入命令。
-tutorial.stage02p2=如果你想离开 Ubiquity 而不是提供一个命令，<strong>使用 Esc 键</strong>。现在尝试。
+tutorial.stage02p1=This is the Ubiquity <strong>input box</strong>.  You can type commands here.
+tutorial.stage02p2=If you want to get out of Ubiquity without giving a command, <strong>tap the Escape key</strong>.  Try that now.
 ##### Stage 03 (part 2 of 6) #####
 
-tutorial.stage03h1=Ubiquity 教程，2/6：天气命令和预览
-tutorial.stage03p1=好了，现在让我们再来学习一个命令，再次召唤 Ubiquity...
-tutorial.stage03p2=（请记住，<strong>按住
-tutorial.stage03p3=键和使用
-tutorial.stage03p4=键。</strong>）
+tutorial.stage03h1=Ubiquity Tutorial, part 2 of 6: Weather command and Previews
+tutorial.stage03p1=OK, so now let's learn a command. Summon Ubiquity again...
+tutorial.stage03p2=(Remember, <strong>hold down the
+tutorial.stage03p3=key and tap the
+tutorial.stage03p4=key.</strong>)
 ##### Stage 04
 
-tutorial.stage04p1=现在输入单词<strong>weather</strong>...
+tutorial.stage04p1=Now type the word <strong>weather</strong>...
 ##### Stage 05
 
 tutorial.stage05p1=Even before you're done typing, the <strong>preview area</strong> shows a preview of the results of your command &#8212; in this case, a weather report.
@@ -55,11 +55,11 @@ tutorial.stage09p2=Let's say you want the <em>calculate</em> command.  You don't
 tutorial.stage10p1=Now <strong>type a space, and then type 22/7</strong> (so that your input says <strong>'cal 22/7'</strong>.)
 ##### Stage 11
 
-tutorial.stage11p1=The <em>calculate</em> command will show you the result of any arithmetic expression you type in.
+tutorial.stage11p1=Il comando <em>Calcola</em> mostrerà il risultato di un'espressione aritmetica
 tutorial.stage11p2=When you're done experimenting with <em>calculate</em>, <strong>hit the escape key.</strong>
 ##### Stage 12 (part 4 of 6) #####
 
-tutorial.stage12h1=Ubiquity Tutorial, part 4 of 6: Google command and the suggestion list
+tutorial.stage12h1=Tutorial di Ubiquity, parte 4 di 6 Il comando Google e l'elenco dei suggerimenti
 tutorial.stage12p1=Summon Ubiquity again...
 ##### Stage 13
 
