--- a/ubiquity/chrome/locale/pt-BR/aboutubiquity.dtd
+++ b/ubiquity/chrome/locale/pt-BR/aboutubiquity.dtd
@@ -70,8 +70,6 @@
 <!ENTITY ubiquity.settings.SelectLanguage "Idioma:">
 <!ENTITY ubiquity.settings.MiscSettings "Outras opções">
 <!ENTITY ubiquity.settings.MaxSuggestions "Número máximo de sugestões:">
-<!ENTITY ubiquity.settings.InputDelay "Atraso ao digitar:">
-<!ENTITY ubiquity.settings.MilliSeconds "milisegundos">
 <!ENTITY ubiquity.settings.Parser2Context "Parser 2">
 <!ENTITY ubiquity.settings.Parser2Details "O Parser 2 pode fazer chamadas a serviços externos da web para compreender o comando digitado e fornecer ações sugeridas baseadas nessa informação. Atualmente esse recurso resulta em um grande número de chamadas a APIs externas e por isso está desativado por padrão.">
 <!ENTITY ubiquity.settings.Parser2EnableExternal "Ativar chamadas externas para todas as consultas do Parser 2">
@@ -84,10 +82,7 @@
 <!ENTITY ubiquity.settings.Bug449WarningLinkText "problema conhecido">
 <!ENTITY ubiquity.settings.Bug449WarningPart2 ".">
 <!-- About chrome/content/about.xhtml -->
-<!ENTITY ubiquity.commandlist.SubDetails1 "Você tem">
-<!ENTITY ubiquity.commandlist.SubDetails2 "comandos em">
-<!ENTITY ubiquity.commandlist.SubDetails3 "Você desinscreveu-se de">
-<!ENTITY ubiquity.commandlist.SubDetailsCommandFeeds "repositórios de comandos.">
+<!ENTITY ubiquity.commandlist.SubscriptionDetails "You Have &cmdCount; commands in &feedCount; command feeds. | You have unsubscribed from <a href='cmdlist.xhtml#graveyard'>&unsubCount; command feeds</a>. | &helpLink;">
 <!ENTITY ubiquity.commandlist.CommandHelpParagraph1 "Todos os comandos reconhecidos pelo &appTitle; estão listados na coluna à direita. O texto em preto é o nome do comando (o que você digita no &appTitle; para usá-lo). O texto em cinza explica o que o comando faz.">
 <!ENTITY ubiquity.commandlist.CommandHelpParagraph2 "A coluna à esquerda exibe todos os “repositórios” nos quais o &appTitle; está inscrito. Cada repositório pode conter vários comandos.">
 <!ENTITY ubiquity.commandlist.CommandHelpParagraph3 "Você pode ver essa página ordenada por repositórios ou por comandos. Clique em um dos links próximos a “Ordenar por” abaixo.">
