prefkeys: Now allows Enter, Tab, and Function keys.

--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -15,7 +15,7 @@ ubiquity.nav.hackubiquity=Hack Ubiquity
 ############################
 # could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
-ubiquity.prefkeys.notifyalphanumeric=Only alphanumeric keys or space are allowed.
+ubiquity.prefkeys.notifyalphanumeric=Only space, enter, tab, alphanumeric or function keys are allowed.
 ubiquity.prefkeys.clickhere=Click here to change
 # After a change occurs this is the confirmation along with modifier names
 ubiquity.prefkeys.confirmchange=Your key has been changed to
