--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -15,10 +15,9 @@ ubiquity.nav.hackubiquity=Hack Ubiquity
 ############################
 # could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
-ubiquity.prefkeys.notifyalphanumeric=Only space, enter, tab, alphanumeric or function keys are allowed.
 ubiquity.prefkeys.clickhere=Click here to change
 # After a change occurs this is the confirmation along with modifier names
-ubiquity.prefkeys.confirmchange=Your key has been changed to
+ubiquity.prefkeys.confirmchange=Your key has been changed to %S.
 
 # These are not yet attached, see prefkeys.js for details.
 # Binding and feedback does not work when applied.
