i18n: most of patch 8 by lech

--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -1,1 +1,9 @@
-# This file is just a placeholder for localizations to core Ubiquity
+############################
+# /modules/feedmanager.js
+############################ check my work on these
+
+ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
+ubiquity.feedmanager.showme=Show me!
+ubiquity.feedmanager.dontremind=Don't remind me again for this website
+ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
+ubiquity.feedmanager.subscribe=Subscribe...
