i18n: rolling back last few changes

--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -19,6 +19,13 @@ ubiquity.prefkeys.clickhere=Click here to change
 # After a change occurs this is the confirmation along with modifier names
 ubiquity.prefkeys.confirmchange=Your key has been changed to %S.
 
+# These are not yet attached, see prefkeys.js for details.
+# Binding and feedback does not work when applied.
+ubiquity.prefkeys.alt=ALT
+ubiquity.prefkeys.ctrl=CTRL
+ubiquity.prefkeys.shift=SHIFT
+ubiquity.prefkeys.meta=META
+
 # Key Combo Input for settings.xhtml (one-liner input focus)
 ubiquity.prefkeys.pressyourcombo=Press your combination...
 
