i18n: patch 18 by lech

--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -1,7 +1,11 @@
 ############################
-# /modules/feedmanager.js
-############################ check my work on these
+# /modules/cmdmanager.js
+############################
+ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
 
+############################
+# /modules/feedmanager.js
+############################
 ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
 ubiquity.feedmanager.showme=Show me!
 ubiquity.feedmanager.dontremind=Don't remind me again for this website
