--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -11,3 +11,10 @@ ubiquity.feedmanager.showme=Show me!
 ubiquity.feedmanager.dontremind=Don't remind me again for this website
 ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
 ubiquity.feedmanager.subscribe=Subscribe...
+
+############################
+# /modules/skinsvc.js
+############################
+ubiquity.skinsvc.saveyourskin=Save Your Skin
+ubiquity.skinsvc.installskin=Install...
+ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
